# template-python-project

./: .coveragerc  .gitignore  MANIFEST.in  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tasks.py  tox.ini
.github/workflows/: pipeline.yml
docs/: conf.py  index.rst  modules.rst  quickstart.rst  template_python_project.rst
template_python_project/: __init__.py  main.py
tests/: __init__.py  test_template_python_project.py
