[metadata]
name = template-python-project
version = 1.0.1
url = https://github.com/mundoalem/template-python-project
project_urls =
    Bug Reports = https://github.com/mundoalem/template-python-project/issues
    Source = https://github.com/mundoalem/template-python-project
author = Egon Braun
author_email = egon@mundoalem.io
maintainer = Mundoalem
maintainer_email = info@mundoalem.io
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
license = GPLv3
license_file = LICENSE
description = A template to bootstrap Python projects.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords = lint, python, template, coverage, build, pipeline, test, release, pypi, shields, pipenv

[options]
packages = find:
include_package_data = True
python_requires = >= 3.7, < 4
install_requires =
  fire >= 0.4.0, < 0.5

[options.entry_points]
console_scripts =
    template-python-project = template_python_project:run
